--- a/fe-jeopardy/src/index.html
+++ b/fe-jeopardy/src/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Jeopardy</title>
+  <title>Jeopardy!</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./assets/jeopardy_icon.jfif">
 </head>
 
 <body>
