--- a/fe-jeopardy/src/index.html
+++ b/fe-jeopardy/src/index.html
@@ -7,11 +7,11 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./assets/jeopardy_icon.jfif">
+  <script defer type="module" src="https://unpkg.com/ionicons@5.1.2/dist/ionicons/ionicons.esm.js"></script>
 </head>
 
 <body>
   <app-root></app-root>
-  <script type="module" src="https://unpkg.com/ionicons@5.1.2/dist/ionicons/ionicons.esm.js"></script>
 </body>
 
 </html>
