--- a/fe-jeopardy/src/index.html
+++ b/fe-jeopardy/src/index.html
@@ -7,7 +7,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./assets/jeopardy_icon.jfif">
-  <script defer type="module" src="https://unpkg.com/ionicons@5.1.2/dist/ionicons/ionicons.esm.js"></script>
+  <script defer type="module" src="https://www.unpkg.com/ionicons@7.4.0/dist/ionicons/ionicons.esm.js"></script>
 </head>
 
 <body>
